// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactSPABundle should generate valid configuration 1`] = `
Object {
  "context": "/app/src",
  "devServer": Object {
    "compress": true,
    "contentBase": "/app/dist",
    "historyApiFallback": true,
    "hot": true,
    "port": 9000,
  },
  "entry": "entry",
  "mode": "test",
  "module": Object {
    "rules": Array [
      Object {
        "loader": "ts",
        "options": Object {
          "getCustomTransformers": [Function],
          "transpileOnly": true,
        },
        "test": /\\\\\\.tsx\\?/,
      },
      Object {
        "loader": "file",
        "options": Object {
          "name": "[hash].[ext]",
          "outputPath": "assets/",
        },
        "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\|svg\\|jpg\\|jpeg\\|png\\|gif\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
      },
      Object {
        "test": /\\\\\\.less\\$/,
        "use": Array [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          Object {
            "loader": "css-loader",
          },
          Object {
            "loader": "less-loader",
            "options": Object {
              "javascriptEnabled": true,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          Object {
            "loader": "css-loader",
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "splitChunks": Object {
      "cacheGroups": Object {
        "style": Object {
          "chunks": "all",
          "enforce": true,
          "name": "style",
          "test": /\\\\\\.css\\$/,
        },
        "vendor": Object {
          "chunks": "all",
          "name": "vendor",
          "priority": 0,
          "test": /\\\\/node_modules\\\\//,
        },
      },
    },
  },
  "output": Object {
    "chunkFilename": "chunks/[name].js?[hash:6]",
    "filename": "[name].js?[hash:6]",
    "path": "/app/dist",
    "publicPath": "/",
  },
  "plugins": Array [
    MiniCssExtractPlugin {
      "options": Object {
        "chunkFilename": "assets/[name].css",
        "filename": "assets/[name].css",
      },
    },
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": true,
        "meta": Object {},
        "minify": false,
        "showErrors": true,
        "template": "<PROJECT_ROOT>/node_modules/html-webpack-plugin/default_index.ejs",
        "templateParameters": [Function],
        "title": "Webpack App",
        "xhtml": false,
      },
    },
    [Function],
  ],
  "resolve": Object {
    "extensions": Array [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
    ],
    "modules": Array [
      "node_modules",
      "/app/src",
    ],
  },
  "resolveLoader": Object {
    "modules": Array [
      "<PROJECT_ROOT>/packages/webpack-bundle-antd/node_modules",
      "node_modules",
    ],
  },
}
`;

exports[`ReactSPABundle should generate valid configuration 2`] = `
Object {
  "context": "/app/src",
  "entry": "entry",
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "loader": "ts",
        "options": Object {
          "getCustomTransformers": [Function],
          "transpileOnly": false,
        },
        "test": /\\\\\\.tsx\\?/,
      },
      Object {
        "loader": "file",
        "options": Object {
          "name": "[hash].[ext]",
          "outputPath": "assets/",
        },
        "test": /\\\\\\.\\(woff\\(2\\)\\?\\|ttf\\|eot\\|svg\\|jpg\\|jpeg\\|png\\|gif\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
      },
      Object {
        "test": /\\\\\\.less\\$/,
        "use": Array [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          Object {
            "loader": "css-loader",
          },
          Object {
            "loader": "less-loader",
            "options": Object {
              "javascriptEnabled": true,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.css\\$/,
        "use": Array [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          Object {
            "loader": "css-loader",
          },
        ],
      },
    ],
  },
  "optimization": Object {
    "splitChunks": Object {
      "cacheGroups": Object {
        "style": Object {
          "chunks": "all",
          "enforce": true,
          "name": "style",
          "test": /\\\\\\.css\\$/,
        },
        "vendor": Object {
          "chunks": "all",
          "name": "vendor",
          "priority": 0,
          "test": /\\\\/node_modules\\\\//,
        },
      },
    },
  },
  "output": Object {
    "chunkFilename": "chunks/[name].js?[hash:6]",
    "filename": "[name].js?[hash:6]",
    "path": "/app/dist",
    "publicPath": "/",
  },
  "plugins": Array [
    MiniCssExtractPlugin {
      "options": Object {
        "chunkFilename": "assets/[name].css",
        "filename": "assets/[name].css",
      },
    },
    HtmlWebpackPlugin {
      "options": Object {
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": true,
        "meta": Object {},
        "minify": false,
        "showErrors": true,
        "template": "<PROJECT_ROOT>/node_modules/html-webpack-plugin/default_index.ejs",
        "templateParameters": [Function],
        "title": "Webpack App",
        "xhtml": false,
      },
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".ts",
      ".tsx",
      ".js",
      ".jsx",
    ],
    "modules": Array [
      "node_modules",
      "/app/src",
    ],
  },
  "resolveLoader": Object {
    "modules": Array [
      "<PROJECT_ROOT>/packages/webpack-bundle-antd/node_modules",
      "node_modules",
    ],
  },
}
`;
